# recording-db

./: .gitignore  .travis.yml  README.md
project/: CMakeLists.txt  main.cpp  recording-db.pro  recording_db.cpp  recording_db.h  recording_db.ui  resources.qrc
project/resources/: icon.icns
